style.css
@font-face {
    font-family: 'Moderat';
    src: url('assets/font.otf');
    font-weight: 600;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: 'Asar', serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.header {
	position: fixed;
	width: 100%;
	text-align: center;
	z-index: 1;
}

.logo {
	width: 106px;
    height: 106px;
    display: inline-block;
    background-image: url(assets/logo.png);
    margin-top: 1em;
}

.midnightHeader.black .logo {
	background-position: 0 106px;
}

.slide {
	height: 800px;
	height: 100vh;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	position: relative;
	font-size: 2em;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	text-align: center;
	overflow: hidden;
}

.slide p + p {
	margin-top: 1em;
}

.light,
p.light a {
	color: #fff;
}

.secondaryType {
	font-family:'Moderat', sans-serif;
	font-weight: 600;
}

.intro { background: #000; }
.skills { background: #FFE900; }
.contact { background: #2B4BFF; }

.intro h2 {
	position: relative;
	z-index: 2;
}

.about p {
	background: #fff;
}

.scroll {
	position: absolute;
	bottom: 2vh;
}

.scroll #arrow {
	position: relative;
	-webkit-animation: scroll 1s ease infinite;
	        animation: scroll 1s ease infinite;
	opacity: 0;
	-webkit-transform: translateY(-10%);
	        transform: translateY(-10%);
}

@-webkit-keyframes scroll {
	0% {
		-webkit-transform: translateY(-10%);
		        transform: translateY(-10%);
		opacity: 1;
	}

	50% {
		-webkit-transform: translateY(100%);
		        transform: translateY(100%);
		opacity: 0;
	}

	100% {
		opacity: 1;
		-webkit-transform: translateY(-10%);
		        transform: translateY(-10%);
	}
}

@keyframes scroll {
	0% {
		-webkit-transform: translateY(-10%);
		        transform: translateY(-10%);
		opacity: 1;
	}

	50% {
		-webkit-transform: translateY(100%);
		        transform: translateY(100%);
		opacity: 0;
	}

	100% {
		opacity: 1;
		-webkit-transform: translateY(-10%);
		        transform: translateY(-10%);
	}
}

.work {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;
}

.shots--shot {
	width: 25%;
	height: 33.333vh;
}

.shots--shot a {
	display: inline-block;
	width: 100%;
	height: 100%;
	background-size: cover;
	background-position: center center;
}

.shots--shot img {
	width: 100%;
}

.canvasBG {
	position: absolute;
}

@media (max-width: 600px) {
	.shots--shot {
		width: 100%;
	}

	.slide {
		padding: 2em;
	}
}

